--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     ]
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^10.2.4",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.2.8",
-    "url-loader": "^4.1.1",
     "autoprefixer": "^9.8.8",
+    "copy-webpack-plugin": "^10.2.4",
     "postcss": "^7.0.39",
     "prettier": "2.7.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "raw-loader": "^4.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "ts-loader": "^9.2.8",
+    "url-loader": "^4.1.1"
   }
 }
